<resources>
    <string name="app_name">UnSumeri</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>

    <string name="action_registration">Registration</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="registration">Registration</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="register_btn">Submit</string>
    <string name="cancel_btn">Cancel</string>

    <string name="message_empty_fields">Fields can not be empty!</string>
    <string name="message_error_login">The email or password don\'t correctly!</string>
    <string name="message_error_data">The user information is not correct!</string>
    <string name="password_error">The password is not in the correct format. Minimum:\n
            8 characters, max. 20, exclusively English;\n
            3 liters upper/lower register;\n
            One Liter Upper Register;\n
            One Symbol;\n
            One symbol;\n
            One number;\n
            One number;\n
            Also, the password must not contain your PIN, birth date, email, phone number, or easy keys (qwerty, abbreviated)\n
            (qwerty, abcd, password, etc.).</string>
    <string name="passwords_not_identical">Passwords do not match!</string>
    <string name="home_menu_item">Home</string>
    <string name="category_item">Categories</string>
    <string name="settings_item">Settings</string>
    <string name="profile_item">Profile</string>
    <string name="add_btn_article_text">Add Article</string>

    <string name="add_btn_text">Add</string>

    <string name="change_category">Change Category</string>

    <string name="change_btn">Change</string>

    <string name="title_article">Title</string>
    <string name="content_article">Content</string>
</resources>