<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.unsumeri.presentation.ui.fragments.AddArticleFragment">
    <data>
        <variable
            name="viewModel"
            type="com.example.unsumeri.presentation.view_model.HomeViewModel" />
    </data>

    <LinearLayout
        android:id="@+id/mainBlock"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/editTextTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/title_article"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toTopOf="@+id/textViewCategory"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editTextMultiLine"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/content_article"
                android:inputType="textMultiLine"
                app:layout_constraintBottom_toTopOf="@+id/buttonAddItem"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewCategory" />

            <Button
                android:id="@+id/buttonAddItem"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/btn_color"
                android:text="@string/add_btn_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textViewCategory"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:scrollHorizontally="false"
                android:text="@string/change_category"
                android:textAlignment="gravity"
                android:typeface="normal"
                app:layout_constraintBottom_toBottomOf="@+id/buttonChange"
                app:layout_constraintEnd_toStartOf="@+id/buttonChange"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTitle" />

            <Button
                android:id="@+id/buttonChange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/btn_color"
                android:text="@string/change_btn"
                app:layout_constraintBottom_toTopOf="@+id/edittTextMultiLine"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textViewCategory"
                app:layout_constraintTop_toBottomOf="@+id/editTextTitle"
                tools:ignore="UnknownId" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</layout>
